# CMakeDemo

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/io/seniorzhai/cmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: base_include.h  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd_run.c  ffmpeg_cmd_run.h  ffmpeg_config.cpp  ffmpeg_config.h  ffmpeg_jni.cpp  jni_handler.cpp  jni_handler.h  media_muxer.cpp  media_muxer.h  n_log.cpp  n_log.h  native-lib.cpp  pcm_encode_aac.cpp  pcm_encode_aac.h  threadsafe_queue.cpp  user_arguments.h  yuv_encode_h264.cpp  yuv_encode_h264.h
app/src/main/java/io/seniorzhai/cmake/: MainActivity.java  NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/seniorzhai/cmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
